mgmt/us-prod-siem-v2/dashboards/yoma-fleet/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: dashboard-yoma-fleet
  name: dashboard-yoma-fleet
